# code_assistant

./: Cargo.toml  README.md
clients/: Cargo.toml
libcm/: Cargo.toml
libcm/src/: chat_manager.rs  lib.rs  model_request.rs  model_response.rs
server/: .env  Cargo.toml
server/src/: http_server.rs  lib.rs  main.rs
