[workspace]
members = [ "clients","libcm", "server"]
resolver = "2"

[workspace.dependencies]
ollama-rs = "0.2.5"
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.138"
serde = {"version" = "1", features = ["derive"]}
actix-web = "4.9.0"
dotenv = "0"
envy = "0"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = {version = "4.5.29", features = ["cargo"]}
thiserror = {version = "2"}

# Local Paths
libcm = {path = "./libcm"}

[workspace.lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
